Changing some words

--- a/_posts/2023-06-21-blog-post-5.md
+++ b/_posts/2023-06-21-blog-post-5.md
@@ -7,7 +7,7 @@ tags:
   - tutorial
 ---
 
-Display entities are a powerful feature introduced in Minecraft 1.19.4 that allow map and data pack creators to showcase various elements within the game. With the ability to display blocks, items, and texts, display entities open up new possibilities for creativity and customization. In this blog post, we'll explore what display entities are, their usefulness in creating custom models in vanilla Minecraft, and why they are a better solution than using mods or custom resource packs.
+Display entities are a powerful feature introduced in Minecraft 1.19.4 that allow map and data pack creators to showcase various elements within the game. With the ability to display blocks, items, and texts, display entities open up new possibilities for creativity and customization. In this tutorial, we'll explore what display entities are, their usefulness in creating custom models in vanilla Minecraft, and why they are a better solution than using mods or custom resource packs.
 
 ## Leveraging the Power of Vanilla Minecraft
 
@@ -17,7 +17,7 @@ While mods and custom resource packs have their place in enhancing Minecraft's v
 
 Display entities are a special type of entity that allows for the presentation of blocks, items, and text within the Minecraft world, all without the need for complex mods or plugins. There are three types of display entities: **Block Display**, **Item Display**, and **Text Display**, each serving a specific purpose. You can summon display entities using the `/summon` or `/execute summon` commands, providing flexibility in their placement and usage.
 
-## Comparing Block Displays to Other Solutions
+## Comparing Display Entities to Other Solutions
 
 Let's take a closer look at how display entities compare to other existing solutions in Minecraft:
 
