New splash page for BDStudio

--- a/_posts/2023-06-01-blog-post-1.md
+++ b/_posts/2023-06-01-blog-post-1.md
@@ -3,7 +3,7 @@ title: 'Why I Created BDStudio: Empowering Minecraft Builders with Enhanced Crea
 date: 2023-06-01
 permalink: /posts/2023/06/blog-post-1/
 tags:
-  - bdstuido
+  - bdstudio
   - devlog
 ---
 
