--- a/_posts/2023-06-11-blog-post-2.md
+++ b/_posts/2023-06-11-blog-post-2.md
@@ -3,7 +3,7 @@ title: 'BDStudio Beta 1.1: Unleashing New Possibilities in Minecraft Building'
 date: 2023-06-11
 permalink: /posts/2023/06/blog-post-2/
 tags:
-  - bdstuido
+  - bdstudio
   - devlog
   - update
 ---
