--- a/_posts/2023-06-12-blog-post-3.md
+++ b/_posts/2023-06-12-blog-post-3.md
@@ -3,7 +3,7 @@ title: 'BDStudio Beta 1.1.1 Bugfix Release: Enhancing Stability and Rendering Ac
 date: 2023-06-12
 permalink: /posts/2023/06/blog-post-3/
 tags:
-  - bdstuido
+  - bdstudio
   - devlog
   - update
 ---
