--- a/_posts/2023-06-15-blog-post-4.md
+++ b/_posts/2023-06-15-blog-post-4.md
@@ -3,7 +3,7 @@ title: 'BDStudio Beta 1.1.2: Enhanced Functionality and Improved Workflow'
 date: 2023-06-15
 permalink: /posts/2023/06/blog-post-4/
 tags:
-  - bdstuido
+  - bdstudio
   - devlog
   - update
 ---
