--- a/_posts/2023-06-29-blog-post-6.md
+++ b/_posts/2023-06-29-blog-post-6.md
@@ -3,7 +3,7 @@ title: 'BDStudio Beta 1.2: Introducing Item Displays and Redesigned GUI'
 date: 2023-06-29
 permalink: /posts/2023/06/blog-post-6/
 tags:
-  - bdstuido
+  - bdstudio
   - devlog
   - update
 ---
