--- a/_posts/2023-06-21-blog-post-5.md
+++ b/_posts/2023-06-21-blog-post-5.md
@@ -3,7 +3,7 @@ title: 'Minecraft Display Entities: A Comprehensive Guide for Customization and 
 date: 2023-06-21
 permalink: /posts/2023/06/blog-post-5/
 tags:
-  - bdstuido
+  - bdstudio
   - tutorial
 ---
 
